fix flicker

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,10 @@
 }
 
 #window-background.animated>div {
+	filter: blur(20px) brightness(0%);
+}
+
+#window-background.animated>div {
 	animation: fade-background .4s linear 1.1s forwards;
 	filter: blur(20px) brightness(0%);
 }
@@ -22,7 +26,7 @@
 	}
 }
 
-#launch-bar {
+#bottom-bar {
 	position: fixed;
 	bottom: 40px;
 	left: 0;
@@ -35,7 +39,7 @@
 	gap: 15px;
 }
 
-#play-logo {
+#main-logo {
     width: 350px;
     opacity: 0;
     animation: logo-back-down .8s cubic-bezier(.7,.89,.35,1.31) forwards;
@@ -53,10 +57,20 @@
     }
 }
 
-#launch-actions {
+#launch-options-bar, #launch-options-bar > * {
 	display: flex;
 	flex-direction: row;
 	gap: 5px;
+	width: 220px;
+}
+
+#launch-options-bar {
+	width: calc(100% - 120px);
+	justify-content: space-between;
+}
+
+#main-actions {
+	width: 340px;
 }
 
 #play-button {
@@ -113,6 +127,16 @@
 		transform: translateX(0);
 		opacity: 1;
 	}
+}
+
+#instance-icon {
+
+}
+
+#instance-details {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 /* Taken from https://codepen.io/joexmdq/pen/EOMLzg. All credit given. Modified slightly */
